--- a/scss/styles.css
+++ b/scss/styles.css
@@ -105,8 +105,8 @@ body {
 
 /*  ----------------------- HEADER --------------------------- */
 header {
-  background-color: #66000a;
-  color: #ccccb8;
+  background-color: #424e64;
+  color: #bbc2ca;
   padding: 1rem 2%; }
   header form {
     float: right; }
@@ -128,7 +128,7 @@ header {
 
 /*  ----------------------- NAVIGATION --------------------------- */
 nav {
-  background-color: #ccccb8;
+  background-color: #bbc2ca;
   border-bottom: 1px solid rgba(0, 0, 0, 0.3); }
   nav ul li {
     float: left;
@@ -141,14 +141,14 @@ nav {
     text-align: center;
     font-weight: 700;
     padding: .5rem 0;
-    color: #66000a;
+    color: #424e64;
     text-decoration: none;
     transition: background 0.75s ease, color 0.75s ease; }
   nav ul li.active a {
-    background-color: #b7b79a; }
+    background-color: #9ea8b4; }
   nav ul li a:hover {
-    color: #ccccb8;
-    background-color: #66000a; }
+    color: #bbc2ca;
+    background-color: #424e64; }
 
 /*  ----------------------- MAIN --------------------------- */
 main figure.banner {
@@ -158,17 +158,17 @@ main figure.banner img {
 main h1 {
   font-size: 2rem;
   margin: 1rem 0 0 2%;
-  color: #66000a; }
+  color: #424e64; }
 main h2 {
   font-size: 1.5rem;
   margin: 0.75rem 0 0 2%;
-  color: #99000f; }
+  color: #566683; }
 main h3 {
   font-size: 1.2rem;
-  color: #cc0014; }
+  color: #6d7f9f; }
 main p {
   line-height: 130%;
-  color: #331912; }
+  color: #35373a; }
 main hr.fadeAway {
   background: linear-gradient(to right, #424e64 0%, rgba(66, 78, 100, 0.01) 100%);
   height: 2px;
@@ -181,12 +181,12 @@ main figure.photo img {
   width: 100%; }
 main figure.photo figcaption {
   text-align: center;
-  color: #66000a; }
+  color: #424e64; }
 main div.blog article {
   margin: 0.5rem 2%;
   width: 100% -gutterdbl; }
 main div.pop {
-  background-color: #8c8c38;
+  background-color: #f1c517;
   text-align: center;
   clear: both;
   padding: 1rem 0; }
@@ -199,20 +199,20 @@ main div.pop {
     padding: .5rem 0; }
   main div.pop .copy span {
     font-size: 3rem;
-    color: #66000a;
+    color: #424e64;
     font-weight: 700; }
 
 /*  ----------------------- FOOTER --------------------------- */
 footer {
   width: 100%;
-  background-color: #66000a; }
+  background-color: #424e64; }
   footer p {
     text-align: center;
-    color: #ccccb8;
+    color: #bbc2ca;
     padding: .75rem 0;
     font-size: .9rem; }
   footer p a {
-    color: #ccccb8; }
+    color: #bbc2ca; }
 
 /*----- Clearfix: Force an Element not to collapse -----*/
 .clearfix:after {
@@ -242,10 +242,6 @@ footer {
       font-size: 5rem; } }
 @media only screen and (min-width: 60rem) {
   /*  ----------------------- BODY --------------------------- */
-  header, nav, main, footer {
-    max-width: 60rem;
-    margin: 0 auto; }
-
   /*  ----------------------- NAVIGATION --------------------------- */
   nav ul {
     margin-left: 2%;
@@ -268,3 +264,5 @@ footer {
     clear: none; }
   main div.blog article:nth-child(3n+1) {
     clear: left; } }
+
+/*# sourceMappingURL=styles.css.map */
