--- a/css/styles.css
+++ b/css/styles.css
@@ -98,122 +98,10 @@ html {
   box-sizing: border-box; }
 
 /*  ----------------------- BODY --------------------------- */
-body {
-  font-family: "Lato", sans-serif;
-  font-weight: 300;
-  font-size: 16px; }
-
 /*  ----------------------- HEADER --------------------------- */
-header {
-  background-color: #66000a;
-  color: #ccccb8;
-  padding: 1rem 2%; }
-  header form {
-    float: right; }
-  header form input {
-    width: 6rem;
-    border-radius: 10px;
-    margin-right: 2%;
-    padding: .2rem;
-    border: none;
-    transition: width .5s; }
-  header form input:focus {
-    width: 8rem; }
-  header h1 {
-    font-size: 2rem;
-    font-weight: 300; }
-  header h2 {
-    font-size: 1.05rem;
-    font-weight: 300; }
-
 /*  ----------------------- NAVIGATION --------------------------- */
-nav {
-  background-color: #ccccb8;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3); }
-  nav ul li {
-    float: left;
-    width: 25%;
-    border-right: 1px solid rgba(0, 0, 0, 0.3); }
-  nav ul li:last-child {
-    border-right: none; }
-  nav ul li a {
-    display: block;
-    text-align: center;
-    font-weight: 700;
-    padding: .5rem 0;
-    color: #66000a;
-    text-decoration: none;
-    transition: background 0.75s ease, color 0.75s ease; }
-  nav ul li.active a {
-    background-color: #b7b79a; }
-  nav ul li a:hover {
-    color: #ccccb8;
-    background-color: #66000a; }
-
 /*  ----------------------- MAIN --------------------------- */
-main figure.banner {
-  width: 100%; }
-main figure.banner img {
-  width: 100%; }
-main h1 {
-  font-size: 2rem;
-  margin: 1rem 0 0 2%;
-  color: #66000a; }
-main h2 {
-  font-size: 1.5rem;
-  margin: 0.75rem 0 0 2%;
-  color: #99000f; }
-main h3 {
-  font-size: 1.2rem;
-  color: #cc0014; }
-main p {
-  line-height: 130%;
-  color: #331912; }
-main hr.fadeAway {
-  background: linear-gradient(to right, #424e64 0%, rgba(66, 78, 100, 0.01) 100%);
-  height: 2px;
-  border: none;
-  margin: 0 2%; }
-main figure.photo {
-  width: 96%;
-  margin: 0.5rem 2%; }
-main figure.photo img {
-  width: 100%; }
-main figure.photo figcaption {
-  text-align: center;
-  color: #66000a; }
-main div.blog article {
-  margin: 0.5rem 2%;
-  width: 100% -gutterdbl; }
-main div.pop {
-  background-color: #8c8c38;
-  text-align: center;
-  clear: both;
-  padding: 1rem 0; }
-  main div.pop .title {
-    font-size: 2.5rem; }
-  main div.pop .subtitle {
-    font-size: 2rem;
-    font-weight: 700; }
-  main div.pop .copy {
-    padding: .5rem 0; }
-  main div.pop .copy span {
-    font-size: 3rem;
-    color: #66000a;
-    font-weight: 700; }
-
 /*  ----------------------- FOOTER --------------------------- */
-footer {
-  width: 100%;
-  background-color: #66000a; }
-  footer p {
-    text-align: center;
-    color: #ccccb8;
-    padding: .75rem 0;
-    font-size: .9rem; }
-  footer p a {
-    color: #ccccb8; }
-
 /*----- Clearfix: Force an Element not to collapse -----*/
 .clearfix:after {
   content: "";
@@ -221,25 +109,7 @@ footer {
   clear: both; }
 
 @media only screen and (min-width: 35rem) {
-  /*  ----------------------- MAIN --------------------------- */
-  main figure.photo {
-    width: 46%;
-    float: left; }
-  main div.blog article {
-    float: left;
-    width: 46%; }
-  main div.blog article:nth-child(2n+1) {
-    clear: left; }
-  main div.pop {
-    padding: 2rem 0; }
-    main div.pop .title {
-      font-size: 4rem; }
-    main div.pop .subtitle {
-      font-size: 3rem; }
-    main div.pop .copy {
-      padding: 2rem 0 0 0; }
-    main div.pop .copy span {
-      font-size: 5rem; } }
+  /*  ----------------------- MAIN --------------------------- */ }
 @media only screen and (min-width: 60rem) {
   /*  ----------------------- BODY --------------------------- */
   header, nav, main, footer {
@@ -247,24 +117,4 @@ footer {
     margin: 0 auto; }
 
   /*  ----------------------- NAVIGATION --------------------------- */
-  nav ul {
-    margin-left: 2%;
-    border-left: 1px solid rgba(0, 0, 0, 0.3); }
-  nav ul li {
-    width: auto; }
-  nav ul li:last-child {
-    border-right: 1px solid rgba(0, 0, 0, 0.3); }
-  nav ul li a {
-    padding: .5rem 1rem; }
-
-  /*  ----------------------- MAIN --------------------------- */
-  main figure.photo {
-    width: 21%;
-    float: left; }
-  main div.blog article {
-    float: left;
-    width: 29.33%; }
-  main div.blog article:nth-child(2n+1) {
-    clear: none; }
-  main div.blog article:nth-child(3n+1) {
-    clear: left; } }
+  /*  ----------------------- MAIN --------------------------- */ }
