logo and top words edited

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,18 @@ html {
 
 /*  ----------------------- BODY --------------------------- */
 /*  ----------------------- HEADER --------------------------- */
+.logoh {
+  display: flex;
+  flex-direction: row; }
+
+h1 {
+  color: #0484b4;
+  font-size: 2rem; }
+
+h2 {
+  color: #d1d1d1;
+  font-size: 1.5rem; }
+
 /*  ----------------------- NAVIGATION --------------------------- */
 /*  ----------------------- MAIN --------------------------- */
 /*  ----------------------- FOOTER --------------------------- */
