--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -11,12 +11,21 @@ body{
 
 
 /*  ----------------------- HEADER --------------------------- */
-header {
-    
-    
-} // end of header
 
+.logoh {
+    display: flex;
+    flex-direction: row;
+}
 
+h1 {
+    color: $fontcolor;
+    font-size: 2rem;
+}
+
+h2 {
+    color: $gray;
+    font-size: 1.5rem;
+}
 
 /*  ----------------------- NAVIGATION --------------------------- */
 nav {
