--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -44,6 +44,20 @@ h3 {
 }
 
 
+figure.banner {
+    width: 100%;
+    margin-top: .5rem;
+}
+
+
+figure.banner img {
+    width: 100%;
+}
+
+
+
+
+
 
 
 
