--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -20,3 +20,28 @@ main {
     
     
 } // end main
+
+
+
+
+.blackbar {
+    display: flex;
+    flex-direction: row;
+   justify-content: center;
+
+p {
+
+}
+
+
+ul.formula  {
+     li {
+         text-align: left;
+     }
+}
+
+
+
+
+
+}
