--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -55,7 +55,40 @@ figure.banner img {
 }
 
 
+.blackbar {
+display: flex;
+flex-direction: column;
+background-color: black;
+margin-top: 1rem;
+padding-bottom: 1rem;
 
+h2 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 1rem;
+    color: #e7db31;
+}
+
+p {
+    color: white;
+    margin-left: 1rem;
+}
+
+ul.formula {
+    list-style-type: none;
+    
+}
+
+
+ul {
+    color: white;
+    text-align: left;
+    margin-left: 3.7rem;
+}
+
+
+
+} // end of black bar
 
 
 
