--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -3,3 +3,12 @@ main {
    
     
 } // end main
+
+
+div.aboutus {
+    grid-template-columns: 1fr 1fr; 
+}
+
+div.aboutus article {
+    text-align: left;
+}
