--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -27,6 +27,7 @@ p {
 }
 
 
+
 ul.formula  {
      li {
          text-align: left;
@@ -35,3 +36,37 @@ ul.formula  {
 } // end of blackbar
 
 
+h4 {
+    font-size: 2rem;
+    color: $fontcolor;
+    font-weight: 700;
+    margin-top: 2.5rem;
+    padding-left: 11rem;
+    margin-bottom: -1.5rem;
+}
+
+
+
+div.aboutus {
+    
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-column-gap: 0;
+        grid-row-gap: 0;
+        padding-left: 10rem;
+padding-right: 10rem;
+}
+
+figure.about {
+    width: 100%;
+}
+
+figure.about img {
+    width: 100%;
+}
+
+div.aboutus article {
+   h2 {
+       margin-top: 1rem;
+    color: $fontcolor;
+   }
+}
