--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -91,6 +91,34 @@ ul {
 } // end of black bar
 
 
+h4 {
+    font-size: 1.5rem;
+    color: $fontcolor;
+    font-weight: 700;
+    margin-top: 1rem;
+    margin-left: 1rem;
+   
+}
+
+div.aboutus {
+    
+        display: grid;
+        grid-template-columns: 1fr;
+         grid-column-gap: 2%;
+        grid-row-gap: .5rem;
+        
+}
+
+
+div.aboutus article {
+    margin: 2rem 2rem;
+    text-align: center;
+    p {
+        text-align: left;
+    }
+}
+
+
 
 
 
