--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,7 @@ div.aboutus article {
     margin-bottom: -1.5rem; }
 
   div.aboutus {
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-column-gap: 0;
     grid-row-gap: 0;
@@ -227,4 +228,70 @@ div.aboutus article {
 
   div.aboutus article h2 {
     margin-top: 1rem;
-    color: #0484b4; } }
+    color: #0484b4; }
+
+  h2 {
+    color: #0484b4; }
+
+  div.bottom {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 0;
+    grid-row-gap: 0;
+    margin-top: 4rem;
+    padding-left: 11rem;
+    padding-right: 11rem;
+    clear: both; }
+    div.bottom article {
+      margin: 0 .5rem; }
+    div.bottom article a {
+      display: block;
+      text-decoration: none;
+      text-align: center;
+      background-color: #0484b4;
+      color: white;
+      padding: .5rem 2rem;
+      margin-left: 2.5rem;
+      margin-right: 2.5rem;
+      border-radius: 1rem; }
+
+  figure.about {
+    width: 100%; }
+
+  figure.about img {
+    width: 100%; }
+
+  div.aboutthem article h2 {
+    margin-top: 1rem;
+    color: #0484b4; }
+
+  div.bottom article:last-child {
+    grid-column: 1 / span 2;
+    margin-top: -20%; }
+
+  div.sponsors {
+    display: flex;
+    flex-direction: row;
+    margin: 5rem 11rem;
+    justify-content: space-between;
+    align-content: center;
+    text-align: center; }
+    div.sponsors figure.spon {
+      width: 100%;
+      margin: auto .5rem; }
+    div.sponsors figure.spon img {
+      width: 100%; }
+
+  footer {
+    max-width: 100%;
+    padding: 1rem 0;
+    background: #1e5799;
+    /* Old browsers */
+    background: -moz-linear-gradient(top, #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%);
+    color: white; }
+    footer p {
+      margin: 0 11rem; } }
