--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -12,3 +12,74 @@ div.aboutus {
 div.aboutus article {
     text-align: left;
 }
+
+
+div.bottom {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 0;
+    grid-row-gap: 0;
+    margin: 2rem 2rem;
+
+article {
+    margin: 0 .5rem;
+}
+
+article a {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    background-color: $fontcolor;
+    color: white;
+    padding: .5rem 2rem;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+    border-radius: 1rem;
+    }
+
+}
+
+
+h2 {
+    color: $fontcolor;
+} 
+
+
+figure.about {
+    width: 80%;
+    }
+    
+    figure.about img {
+    width: 100%;
+    }
+
+
+    div.aboutthem article {
+
+        h2 {
+           margin-top: 1rem;
+        color: $fontcolor;
+        }
+        }
+
+
+        div.sponsors {
+            display: flex;
+            flex-direction: row;
+            margin: 2rem 4rem;
+            justify-content: space-between;
+            align-content: center;
+            text-align: center;
+            
+        
+        
+            figure.spon {
+                width: 100%;
+                margin: auto .5rem;
+            }
+        
+            figure.spon img {
+                width: 100%;
+            }
+        }
+        
