--- a/css/styles.css
+++ b/css/styles.css
@@ -247,7 +247,8 @@ footer {
 @media only screen and (min-width: 35rem) {
   /*  ----------------------- MAIN --------------------------- */
   div.aboutus {
-    grid-template-columns: 1fr 1fr; }
+    grid-template-columns: 1fr 1fr;
+    margin: 5rem; }
 
   div.aboutus article {
     text-align: left; }
