--- a/css/styles.css
+++ b/css/styles.css
@@ -312,8 +312,10 @@ footer {
     flex-direction: row;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    padding-left: 11rem;
-    padding-right: 11rem; }
+    padding-left: 10rem;
+    padding-right: 10rem; }
+    .blackbar h2 {
+      width: 300px; }
     .blackbar ul.formula li {
       text-align: left; }
 
