--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -20,12 +20,12 @@ main {
     flex-direction: row;
    margin-top: 1rem;
    margin-bottom: 1rem;
-padding-left: 11rem;
-padding-right: 11rem;
-p {
+padding-left: 10rem;
+padding-right: 10rem;
 
+h2 {
+    width: 300px;
 }
-
 
 
 ul.formula  {
