--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -6,7 +6,7 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 
 /*  ----------------------- BODY --------------------------- */
 body{
-   
+   font-family: 'Teko', sans-serif;
 }
 
 
